--- a/gestion/templates/cards/card_elemento.html
+++ b/gestion/templates/cards/card_elemento.html
@@ -1,4 +1,4 @@
-<div class="producto-box m-4 bg-light p-4 d-flex flex-column justify-content-between">
+<div class="cards producto-box m-4 p-4 d-flex flex-column justify-content-between">
     <div class="producto-img">
         <div class="producto">
             <div class="flip-box">
