--- a/gestion/templates/factura/detalle-factura.html
+++ b/gestion/templates/factura/detalle-factura.html
@@ -2,6 +2,7 @@
 {% load crispy_forms_tags %}
 {% load static %}
 {% block contenido %}
+<div class="cuerpo-admin">
     <div class="contenido-cuerpo borde">
         <h1 class="text-center">Detalles Factura</h1>
         <div class="p-3">
@@ -160,6 +161,7 @@
             </div>
         {% endif %}
     </div>
+</div>    
 {% endblock contenido %}
 {% block javascript %}
 <script type="text/javascript" src="{% static 'js/total-calculado.js' %}"></script>
