--- a/gestion/templates/partials/admin-header.html
+++ b/gestion/templates/partials/admin-header.html
@@ -1,7 +1,7 @@
 {% load static %}
 <header>
     <div class="navbar contenido-navbar borde">
-        <div class="pt1">
+        <div class="logo">
             <img title="Logo" src="{% static 'img/logoo1.png' %}" alt="">
         </div>
         <div class="pt2">
@@ -13,26 +13,30 @@
                 </script>
             </div>
             <!-- Accesibilidad -->
-            <div class="acces btn-group dropstart">
-                <button type="button" class="btn btn-light rounded-circle p-1" data-bs-toggle="dropdown"
-                    aria-expanded="false">
-                    <img class="rounded-circle" src="{% static 'img/icons/accesibilidad.svg' %}" width="33" alt=""
-                        srcset="">
-                </button>
-                <ul class="dropdown-menu">
-                    <li><button title="Contraste" class="dropdown-item" id="dark" href=""><img
-                                src="{% static 'img/icons/eye-fill.svg' %}" width="30" alt="" srcset="">
-                            Contraste</button></li>
-                    <li><button title="Ampliar" class="dropdown-item" id="ampliar" href=""><img
-                                src="{% static 'img/icons/zoom-in.svg' %}" width="30" alt="" srcset=""> Ampliar</button>
-                    </li>
-                    <li><button title="Reducir" class="dropdown-item input-group" id="reducir"><img
-                                src="{% static 'img/icons/zoom-out.svg' %}" width="30" alt="" srcset="">Reducir
-                        </button></li>
-                    <li><button title="Restaurar" class="dropdown-item" id="restaurar" href=""><img
-                                src="{% static 'img/icons/eye-fill.svg' %}" width="30" alt="" srcset="">
-                            Restaurar</button></li>
-                </ul>
+            <div class=" dropdown d-flex justify-content-center">
+                <div class="acces">
+                    <button type="button" class="btn btn-light rounded-circle p-1" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        <img class="rounded-circle" src="{% static 'img/icons/accesibilidad.svg' %}" width="33" alt=""
+                            srcset="">
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><button title="Contraste" class="dropdown-item" id="dark" href=""><img
+                                    src="{% static 'img/icons/eye-fill.svg' %}" width="30" alt="" srcset="">
+                                 Contraste</button></li>
+                        <li><button title="Ampliar" class="dropdown-item" id="ampliar" href=""><img
+                                    src="{% static 'img/icons/zoom-in.svg' %}" width="30" alt="" srcset="">
+                                 Ampliar</button>
+                        </li>
+                        <li><button title="Reducir" class="dropdown-item input-group" id="reducir"><img
+                                    src="{% static 'img/icons/zoom-out.svg' %}" width="30" alt="" srcset="">Reducir
+                            </button></li>
+                        <li><button title="Restaurar" class="dropdown-item" id="restaurar" href=""><img
+                                    src="{% static 'img/icons/rotate-right-solid.svg' %}" width="30" alt="" srcset="">
+                                 Restaurar</button></li>
+                    </ul>
+                </div>
+
                 <div class="dropdown salir">
                     <a title="Salir" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                         <img src="{% static 'img/salir.png' %}" width="30" height="30" class="rounded-circle">
